--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "description": "00389",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon run ./index.js"
   },
   "author": "Juan Rodas 00389",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "moment": "^2.29.4",
+    "mongoose": "^7.6.2",
+    "ngx-cookie-service": "^16.0.1",
+    "nodemon": "^3.0.1"
   }
 }
